Master branch rename (#881)
* Fix typo in CSS stylesheet

* Change all references of master to main

--- a/src/templates/en/2019/methodology.html
+++ b/src/templates/en/2019/methodology.html
@@ -76,7 +76,7 @@
         </p>
 
         <p>
-          All of the metrics presented in the Web Almanac are publicly reproducible using the dataset on BigQuery. You can browse the queries used by all chapters in our <a href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/master/sql/2019">GitHub repository</a>.
+          All of the metrics presented in the Web Almanac are publicly reproducible using the dataset on BigQuery. You can browse the queries used by all chapters in our <a href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/main/sql/2019">GitHub repository</a>.
         </p>
 
         <p class="note">
@@ -84,7 +84,7 @@
         </p>
 
         <p>
-          For example, to understand the median number of bytes of JavaScript per desktop and mobile page, see <a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/master/sql/2019/01_JavaScript/01_01b.sql">01_01b.sql</a>:
+          For example, to understand the median number of bytes of JavaScript per desktop and mobile page, see <a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/sql/2019/01_JavaScript/01_01b.sql">01_01b.sql</a>:
         </p>
 
         <div class="code-block floating-card">
@@ -398,7 +398,7 @@
       </p>
 
       <p>
-        Starting in August 2019, the data analysts began writing queries to extract the results for each metric. In total, <strong>431 queries</strong> were written by hand! You can browse all of the queries by chapter in the <a href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/master/sql/2019">sql/2019</a> directory of the project's GitHub repository.
+        Starting in August 2019, the data analysts began writing queries to extract the results for each metric. In total, <strong>431 queries</strong> were written by hand! You can browse all of the queries by chapter in the <a href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/main/sql/2019">sql/2019</a> directory of the project's GitHub repository.
       </p>
     </section>
 
