--- a/src/templates/fr/2019/methodology.html
+++ b/src/templates/fr/2019/methodology.html
@@ -76,7 +76,7 @@
         </p>
 
         <p>
-        Toutes les statistiques présentées dans le Web Almanac sont reproductibles publiquement à l’aide de l’ensemble de données sur BigQuery. Vous pouvez parcourir les requêtes utilisées par tous les chapitres dans notre <a href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/master/sql/2019">dépôt GitHub</a>.
+        Toutes les statistiques présentées dans le Web Almanac sont reproductibles publiquement à l’aide de l’ensemble de données sur BigQuery. Vous pouvez parcourir les requêtes utilisées par tous les chapitres dans notre <a href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/main/sql/2019">dépôt GitHub</a>.
         </p>
 
         <p class="note">
@@ -84,7 +84,7 @@
         </p>
 
         <p>
-        Par exemple, pour obtenir le nombre médian d’octets de JavaScript servis sur les pages pour ordinateurs de bureau et périphériques mobiles, regardez <a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/master/sql/2019/01_JavaScript/01_01b.sql">01_01b.sql</a>:
+        Par exemple, pour obtenir le nombre médian d’octets de JavaScript servis sur les pages pour ordinateurs de bureau et périphériques mobiles, regardez <a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/sql/2019/01_JavaScript/01_01b.sql">01_01b.sql</a>:
         </p>
 
         <div class="code-block floating-card">
@@ -398,7 +398,7 @@
       </p>
 
       <p>
-        À partir d’août 2019, les analystes ont commencé à rédiger des requêtes pour extraire les résultats pour chaque indicateur. Au total, <strong>431 requêtes</strong> furent écrites à la main&nbsp;! Vous pouvez parcourir toutes les requêtes, chapitre par chapitre, dans le répertoire <a href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/master/sql/2019">sql/2019</a> du dépôt Github de ce projet.
+        À partir d’août 2019, les analystes ont commencé à rédiger des requêtes pour extraire les résultats pour chaque indicateur. Au total, <strong>431 requêtes</strong> furent écrites à la main&nbsp;! Vous pouvez parcourir toutes les requêtes, chapitre par chapitre, dans le répertoire <a href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/main/sql/2019">sql/2019</a> du dépôt Github de ce projet.
       </p>
     </section>
 
