--- a/src/templates/ja/2019/methodology.html
+++ b/src/templates/ja/2019/methodology.html
@@ -76,7 +76,7 @@
         </p>
 
         <p>
-          Web Almanacで紹介されているすべてのメトリクスは、BigQuery上のデータセットを使用して一般に再現可能です。すべての章で使用されているクエリは、<a href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/master/sql/2019">GitHubリポジトリ</a>で閲覧できます。
+          Web Almanacで紹介されているすべてのメトリクスは、BigQuery上のデータセットを使用して一般に再現可能です。すべての章で使用されているクエリは、<a href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/main/sql/2019">GitHubリポジトリ</a>で閲覧できます。
         </p>
 
         <p class="note">
@@ -84,7 +84,7 @@
         </p>
 
         <p>
-          例えば、デスクトップページとモバイルページあたりのJavaScriptのバイト数の中央値を把握するには、<a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/master/sql/2019/01_JavaScript/01_01b.sql">01_01b.sql</a>を参照してください。
+          例えば、デスクトップページとモバイルページあたりのJavaScriptのバイト数の中央値を把握するには、<a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/sql/2019/01_JavaScript/01_01b.sql">01_01b.sql</a>を参照してください。
         </p>
 
         <div class="code-block floating-card">
@@ -398,7 +398,7 @@
       </p>
 
       <p>
-        2019年8月から、データアナリストが各メトリクスの結果を抽出するためのクエリを書き始めました。合計で、<strong>431個のクエリ</strong>が手書きで書かれました! プロジェクトのGitHubリポジトリの<a href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/master/sql/2019">sql/2019</a>ディレクトリで、章別にすべてのクエリを閲覧することができます。
+        2019年8月から、データアナリストが各メトリクスの結果を抽出するためのクエリを書き始めました。合計で、<strong>431個のクエリ</strong>が手書きで書かれました! プロジェクトのGitHubリポジトリの<a href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/main/sql/2019">sql/2019</a>ディレクトリで、章別にすべてのクエリを閲覧することができます。
       </p>
     </section>
 
