--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    {%- if request.url_root != "https://almanac.httparchive.org/" %}
+    <meta name="robots" content="noindex">
+    {%- endif %}
     {% block meta %}
       <meta property="og:title" content="{{ self.title() }}">
       <meta property="og:image" content="/static/images/ha.png">
