Tidy up breadcrumbs for multi-year support (#890)
* Tidy up breadcrumbs for multi-year support

* Move index breadcrumb back to where it original was.

--- a/src/templates/base/2019/index.html
+++ b/src/templates/base/2019/index.html
@@ -5,18 +5,18 @@
 {% block image_width %}715{% endblock %}
 
 {% block breadcrumb %}
-  <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "BreadcrumbList",
-      "itemListElement": [{
-        "@type": "ListItem",
-        "position": 1,
-        "name": "{{ self.breadcrumb_name_1() }}",
-        "item": "https://almanac.httparchive.org{{  url_for('home', year=year, lang=lang) }}"
-      }]
-    }
-    </script>
+<script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [{
+      "@type": "ListItem",
+      "position": 1,
+      "name": "{{ lang }}",
+      "item": "https://almanac.httparchive.org/{{lang}}/"
+    }]
+  }
+</script>
 {% endblock %}
 
 {% block styles %}
