--- a/src/templates/base/2019/base.html
+++ b/src/templates/base/2019/base.html
@@ -82,13 +82,13 @@
       "itemListElement": [{
         "@type": "ListItem",
         "position": 1,
-        "name": "{{ self.breadcrumb_name_1() }}",
-        "item": "https://almanac.httparchive.org/{{lang}}/{{year}}"
+        "name": "{{ lang }}",
+        "item": "https://almanac.httparchive.org/{{lang}}/"
       },{
         "@type": "ListItem",
         "position": 2,
-        "name": "{{ self.breadcrumb_name_2() }}",
-        "item": "{{ self.page_url() }}"
+        "name": "{{ year }}",
+        "item": "https://almanac.httparchive.org/{{lang}}/{{year}}"
       }]
     }
   </script>
