2020 year support and basic 2020 landing page (#893)
* Generate Chapters (#891)

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

* Misc fixes

* Turn off 2020 by default

* Optimised images with calibre/image-actions

* Fix mobile drop down

* Hide items for 2020 for now

* Fix selectors on desktop

* Revert to grey for 2020

* Remove year drop down from Accessibility Statement

* Better 2020 image

* Merge Language and Year JavaScript

* Review feedback

* Fix typos

* Better way to hide nav items for 2020

* Handle hero image better cross years

* Remove uneeded if statement

* Rename block

* Add sorting to switchers

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/src/static/css/2019.css
+++ b/src/static/css/2019.css
@@ -507,6 +507,10 @@ header nav li, footer nav li {
   line-height: 1.4em;
 }
 
+header nav .menu li .year-switcher, header nav .menu li .language-switcher {
+  margin-bottom: 4em;
+}
+
 header nav {
   display: flex;
   align-items: center;
@@ -578,6 +582,7 @@ header .cta {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;  
+  min-width: 100px;
 }
 
 .language-switcher select::-ms-expand,
