--- a/src/templates/base/2019/index.html
+++ b/src/templates/base/2019/index.html
@@ -36,8 +36,8 @@
         {{ self.start_exploring() }}
       </a>
     </div>
-    <div class="intro-image-2019-wrapper">
-      <div class="intro-image-2019"></div>
+    <div class="intro-image-year-wrapper">
+      <div class="intro-image-year"></div>
     </div>
     <div class="intro-image-wrapper">
       <div class="intro-image"></div>
