--- a/src/templates/es/2019/base.html
+++ b/src/templates/es/2019/base.html
@@ -24,6 +24,7 @@ Nuestra misión es combinar las estadísticas y tendencias sin procesar del HTTP
 {% block language_switcher %}Selector de idioma{% endblock %}
 {% block year_switcher %}Selector de año{% endblock %}
 
+{% block home %}Página de inicio{% endblock %}
 {% block table_of_contents_title %}Tabla de Contenidos{% endblock %}
 {% block contributors_title %}Contribuidores{% endblock %}
 {% block methodology_title %}Metodología{% endblock %}
