--- a/src/templates/fr/2019/base.html
+++ b/src/templates/fr/2019/base.html
@@ -24,6 +24,7 @@ Notre mission est de combiner les statistiques brutes et les tendances de HTTP A
 {% block language_switcher %}Sélecteur de langue{% endblock %}
 {% block year_switcher %}Sélecteur d'année{% endblock %}
 
+{% block home %}Accueil{% endblock %}
 {% block table_of_contents_title %}Table des matières{% endblock %}
 {% block contributors_title %}Contributeurs et contributrices{% endblock %}
 {% block methodology_title %}Méthodologie{% endblock %}
