--- a/src/templates/ja/2019/base.html
+++ b/src/templates/ja/2019/base.html
@@ -23,6 +23,7 @@
 {% block language_switcher %}言語ピッカー{% endblock %}
 {% block year_switcher %}年ピッカー{% endblock %}
 
+{% block home %}ホームページ{% endblock %}
 {% block table_of_contents_title %}目次{% endblock %}
 {% block contributors_title %}貢献者{% endblock %}
 {% block methodology_title %}方法論{% endblock %}
