--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -36,7 +36,7 @@
     {% endif %}
   </head>
 
-  <body>
+  <body class="year-{{ year }}">
     <svg xmlns="http://www.w3.org/2000/svg" width="0" height="0" display="none">
       <!-- HTTPArchive -->
       <symbol id="ha" viewBox="0 0 432 225">
