--- a/src/templates/en/2019/base.html
+++ b/src/templates/en/2019/base.html
@@ -24,6 +24,7 @@ Our mission is to combine the raw stats and trends of the HTTP Archive with the 
 {% block language_switcher %}Language Switcher{% endblock %}
 {% block year_switcher %}Year Switcher{% endblock %}
 
+{% block home %}Home{% endblock %}
 {% block table_of_contents_title %}Table of Contents{% endblock %}
 {% block contributors_title %}Contributors{% endblock %}
 {% block methodology_title %}Methodology{% endblock %}
