--- a/src/templates/ja/2019/base.html
+++ b/src/templates/ja/2019/base.html
@@ -9,6 +9,11 @@
 {% block skip_navigation %}ナビゲーションをスキップ{% endblock %}
 
 {% block organization %}HTTP ArchiveによるWeb Almanac{% endblock %}
+{% block web_almanac_logo %}
+  <span class="ha line-group">HTTP Archive</span>
+  <span class="pre">による</span>
+  <span class="wa">Web Almanac</span>
+{% endblock %}
 
 {% block mission %}
 私たちの使命は、HTTP Archiveの生の統計やトレンドを、ウェブコミュニティの専門知識と組み合わせることです。Web Almanacは、実際のデータと信頼できるウェブの専門家に裏付けられた、ウェブの状態に関する包括的なレポートです。ページコンテンツ、ユーザー体験、パブリッシング、配布などの側面を網羅した20の章で構成されています。
