--- a/src/templates/en/2019/base.html
+++ b/src/templates/en/2019/base.html
@@ -10,6 +10,13 @@
 {% block skip_navigation %}Skip navigation{% endblock %}
 
 {% block organization %}Web Almanac by HTTP Archive{% endblock %}
+{% block web_almanac_logo %}
+  <span class="wa">Web Almanac</span>
+  <span class="line-group">  
+    <span class="pre">By</span>
+    <span class="ha">HTTP Archive</span>
+  </span>
+{% endblock %}
 
 {% block mission %}
 Our mission is to combine the raw stats and trends of the HTTP Archive with the expertise of the web community. The Web Almanac is a comprehensive report on the state of the web, backed by real data and trusted web experts. It is comprised of 20 chapters spanning aspects of page content, user experience, publishing, and distribution.
