Fixed typo in js featured snippet (#941)
* fix: typo in js featured snippet

* fix(featured_chapter/js): explanation of 3P and 1P

* fix(blockquote):add line-height to make it easier to read

--- a/src/static/css/2019.css
+++ b/src/static/css/2019.css
@@ -724,6 +724,7 @@ blockquote {
   font-style: italic;
   font-size: 19px;
   font-size: 1.1875rem;
+  line-height: 1.5em;
 }
 
 blockquote::before {
